@@ -4,7 +4,7 @@
 .\" See the file "license.terms" for information on usage and redistribution
 .\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 .\"
-.\" RCS: @(#) $Id: mathop.n,v 1.4.2.2 2007/04/08 14:58:47 dgp Exp $
+.\" RCS: @(#) $Id: mathop.n,v 1.4.2.3 2007/11/02 13:04:53 dgp Exp $
 .\"
 .so man.macros
 .TH mathop n 8.5 Tcl "Tcl Mathematical Operator Commands"
@@ -49,7 +49,7 @@ package require \fBTcl 8.5\fR
 .br
 \fB::tcl::mathop::<=\fR ?\fIarg\fR ...?
 .br
-\fB::tcl::mathop::=>\fR ?\fIarg\fR ...?
+\fB::tcl::mathop::>=\fR ?\fIarg\fR ...?
 .br
 \fB::tcl::mathop::>\fR ?\fIarg\fR ...?
 .br
